// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/TextInput default 1`] = `
<input
  className="sc-bZQynM gKOwit"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput error 1`] = `
<input
  className="sc-bZQynM jjrjUp"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput focus 1`] = `
<input
  className="sc-bZQynM hDNapd"
  placeholder="placeholder"
/>
`;
